# db-vfs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  llms.txt  policy.example.toml  rust-toolchain.toml  rustfmt.toml
.artifact/: review_root_merged_20260409.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  docs.yml
core/: Cargo.toml
core/src/: error.rs  glob_utils.rs  lib.rs  path.rs  policy.rs  redaction.rs  traversal.rs  workspace_pattern.rs
docs/: README.md  book.toml  docs-system-map.md  llms.txt
docs/architecture/: source-layout.md  system-boundaries.md
docs/src/: SUMMARY.md  concepts.md  development.md  getting-started.md  guides.md  http-api.md  index.md  llms.md  observability.md  policy.md  security.md  storage.md  troubleshooting.md
githooks/: commit-msg  pre-commit
migrations/postgres/: 0001_init.sql  0002_file_generations.sql  0003_path_invariants.sql  0004_workspace_id_invariants.sql
migrations/sqlite/: 0001_init.sql  0002_file_generations.sql  0003_path_invariants.sql  0004_workspace_id_invariants.sql
scripts/: clippy-strict.sh  docs.sh  gate.sh  llms.sh  setup-githooks.sh
service/: Cargo.toml
service/src/: lib.rs  main.rs  policy.rs  policy_io.rs  server.rs
service/src/server/: audit.rs  auth.rs  backend.rs  handlers.rs  layers.rs  mod.rs  rate_limiter.rs  runner.rs
service/tests/: audit_log.rs  http_body_limits.rs  http_smoke.rs
src/: lib.rs  line_endings.rs  migrations.rs  text_lines.rs
src/store/: mod.rs  postgres.rs  sqlite.rs
src/vfs/: delete.rs  glob.rs  grep.rs  mod.rs  patch.rs  read.rs  util.rs  write.rs
tests/: docs_system.rs  postgres_store.rs  sqlite_vfs.rs
