[package]
name = "db-vfs"
version = "1.0.0"
edition = "2024"
rust-version = "1.91"
description = "DB-backed virtual filesystem (read/glob/grep/write/patch/delete) with explicit safety policy."
readme = "README.md"

[workspace]
members = ["core", "service"]
resolver = "3"

[dependencies]
db-vfs-core = { path = "core" }
diffy = "0.4"
globset = "0.4"
regex = "1"
regex-syntax = "0.8"
serde = { version = "1", features = ["derive"] }
memchr = "2"
log = "0.4"

postgres = { version = "0.19", optional = true }
rusqlite = { version = "0.32", optional = true }

[features]
default = ["sqlite-bundled"]
sqlite = ["dep:rusqlite"]
sqlite-bundled = ["sqlite", "rusqlite/bundled"]
postgres = ["dep:postgres"]

[dev-dependencies]
serde_json = "1"
