[package]
name = "db-vfs-service"
version = "0.2.0"
edition = "2024"
rust-version = "1.91"
description = "HTTP service for db-vfs (SQLite/Postgres-backed virtual filesystem)."

[features]
default = ["sqlite-bundled"]
sqlite = ["db-vfs/sqlite", "dep:r2d2_sqlite", "dep:rusqlite"]
sqlite-bundled = ["sqlite", "db-vfs/sqlite-bundled", "rusqlite/bundled"]
postgres = ["db-vfs/postgres", "dep:r2d2_postgres"]

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
db-vfs = { path = "..", default-features = false }
db-vfs-core = { path = "../core" }
fs2 = "0.4"
omne-integrity-primitives = { git = "https://github.com/omne42/omne-runtime.git", rev = "ff5a795d1a5294cb1f5c9911dcfd601539a67d68", package = "omne-integrity-primitives" }
r2d2 = "0.8"
r2d2_postgres = { version = "0.18", optional = true }
r2d2_sqlite = { version = "0.25", optional = true }
rusqlite = { version = "0.32", default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
